# annabel_trading

./: .gitignore  Dockerfile  README.md  docker-compose.yml  gcloud.sh  pyproject.toml
source/: docker_compose_scheduler.py  logger.py  main.py  my_logger.py  pivot_hist.json  toolkits.py
source/models/: __init__.py  analyzor.py  livermore.py
source/trading_manager/: __init__.py  trading_manager.py
source/utils/: __init__.py  degiro_connector.py  product_consumer.py  request_on_date.py  trading_manager.py  trading_operator.py
tests/: conftest.py
tests/integration/: test_main.py
tests/integration/models/: test_livermore_analyze.py
tests/unit/: test_make_an_order.py  test_toolkits.py
tests/unit/models/: test_analyzor.py  test_livermore.py
tests/unit/utils/: test_make_an_order.py  test_request_on_date.py  test_trading_operator.py
