[tool.poetry]
name = "annabel_trading"
version = "0.1.0"
description = "A command line tool interacts with DEGIRO for basic trading"
authors = ["Xiaochen Wang"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.9"
degiro-connector = "^2.0.23"
cryptography = "^41.0.1"
protobuf = "^4.23.3"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
